--- a/About/about.html
+++ b/About/about.html
@@ -16,8 +16,7 @@
 </head>
 
 <body>
-<div class="container-all">
-  <div id="nav-100vh">
+  <div class="container-all">
     <div id="nav-bar-top">
       <div class="social-contact">
         <div class="nav-contact">
@@ -102,17 +101,76 @@
         </nav>
       </div>
     </div>
-    <div class="about-us">
-      <!-- <div class="about-us-text-info"> -->
+    <div id="nav-100vh">
+      <div class="about-us">
+        <!-- <div class="about-us-text-info"> -->
         <h1>About US</h1>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-      <!-- </div> -->
+        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
+          texts.</p>
+        <!-- </div> -->
+      </div>
+    </div>
+    <div id="about-hero">
+      <div class="about-img-cont">
+        <div class="about-text">
+          <p>ABOUT US</p>
+          <h1>Explore All Corners of The World With Us</h1>
+          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
+            blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
+            ocean.</p>
+          <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
+            paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+          <button>Read more</button>
+        </div>
+        <div class="about-img">
+          <img src="https://preview.colorlib.com/theme/passport/images/about_1.jpg.webp" alt="beach-plane">
+          <img src="https://preview.colorlib.com/theme/passport/images/about_2.jpg.webp" alt="beach-jet">
+        </div>
+      </div>
+    </div>
+    <div class="testi-faq">
+      <div class="testimonitals">
+        <div class="test-crou-feedback">
+          <p>HAPPY CUSTOMER</p>
+          <h1>Testimonials</h1>
+          <div class="test-carousel">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="..." alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="..." alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="..." alt="Third slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="test-faq">
+          <div class="test-faq-qustion">
+            <p>FAQ</p>
+            <h1>Frequentyl Asked Questions</h1>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="about-hero">
-  
-  </div>
-</div>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
