--- a/Booking/booking.html
+++ b/Booking/booking.html
@@ -385,16 +385,10 @@
     <!-- navbar........       -->
 
     <!-- Body.............. -->
-    <!-- <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script> -->
-    <script src="script.js"></script>
 
     <div id="top" class="border-box">
       <div class="border-box">
-        <span id="destination"> Your Destination </span>
+        <span id="destination"> Book Your Destination </span>
       </div>
       <div id="progress" class="border-box">
         <div class="progress-elems">
@@ -402,8 +396,9 @@
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="currentColor"
-              class="bi bi-1-circle-fill invisible"
+              class="bi bi-1-circle-fill"
               viewBox="0 0 16 16"
+              id="tour-progress-num"
             >
               <path
                 d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M9.283 4.002H7.971L6.072 5.385v1.271l1.834-1.318h.065V12h1.312V4.002Z"
@@ -412,8 +407,9 @@
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="currentColor"
-              class="bi bi-check-circle-fill progress-check"
+              class="bi bi-check-circle-fill progress-check  invisible"
               viewBox="0 0 16 16"
+              id="tour-progress-comp"
             >
               <path
                 d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"
@@ -427,8 +423,9 @@
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="currentColor"
-              class="bi bi-2-circle-fill progress-check"
+              class="bi bi-2-circle-fill"
               viewBox="0 0 16 16"
+              id="contact-progress-num"
             >
               <path
                 d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M6.646 6.24c0-.691.493-1.306 1.336-1.306.756 0 1.313.492 1.313 1.236 0 .697-.469 1.23-.902 1.705l-2.971 3.293V12h5.344v-1.107H7.268v-.077l1.974-2.22.096-.107c.688-.763 1.287-1.428 1.287-2.43 0-1.266-1.031-2.215-2.613-2.215-1.758 0-2.637 1.19-2.637 2.402v.065h1.271v-.07Z"
@@ -439,6 +436,7 @@
               fill="currentColor"
               class="bi bi-check-circle-fill progress-check invisible"
               viewBox="0 0 16 16"
+              id="contact-progress-comp"
             >
               <path
                 d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"
@@ -454,6 +452,7 @@
               fill="currentColor"
               class="bi bi-3-circle-fill"
               viewBox="0 0 16 16"
+              id="payment-progress-num"
             >
               <path
                 d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-8.082.414c.92 0 1.535.54 1.541 1.318.012.791-.615 1.36-1.588 1.354-.861-.006-1.482-.469-1.54-1.066H5.104c.047 1.177 1.05 2.144 2.754 2.144 1.653 0 2.954-.937 2.93-2.396-.023-1.278-1.031-1.846-1.734-1.916v-.07c.597-.1 1.505-.739 1.482-1.876-.03-1.177-1.043-2.074-2.637-2.062-1.675.006-2.59.984-2.625 2.12h1.248c.036-.556.557-1.054 1.348-1.054.785 0 1.348.486 1.348 1.195.006.715-.563 1.237-1.342 1.237h-.838v1.072h.879Z"
@@ -464,6 +463,34 @@
               fill="currentColor"
               class="bi bi-check-circle-fill progress-check invisible"
               viewBox="0 0 16 16"
+              id="payment-progress-comp"
+            >
+              <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"
+              />
+            </svg>
+          </span>
+          <span> Payment </span>
+        </div>
+        <div class="progress-elems">
+          <span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="currentColor"
+              class="bi bi-4-circle-fill"
+              viewBox="0 0 16 16"
+              id="complete-progress-num"
+            >
+              <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M7.519 5.057c-.886 1.418-1.772 2.838-2.542 4.265v1.12H8.85V12h1.26v-1.559h1.007V9.334H10.11V4.002H8.176c-.218.352-.438.703-.657 1.055ZM6.225 9.281v.053H8.85V5.063h-.065c-.867 1.33-1.787 2.806-2.56 4.218Z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="currentColor"
+              class="bi bi-check-circle-fill progress-check invisible"
+              viewBox="0 0 16 16"
+              id="complete-progress-comp"
             >
               <path
                 d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"
@@ -472,6 +499,50 @@
           </span>
           <span> Complete </span>
         </div>
+      </div>
+    </div>
+    <div class="" id="destinationcardscontainer">
+      <div id="dest-leftarrow">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="currentColor"
+          class="bi bi-caret-left-fill"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="m3.86 8.753 5.482 4.796c.646.566 1.658.106 1.658-.753V3.204a1 1 0 0 0-1.659-.753l-5.48 4.796a1 1 0 0 0 0 1.506z"
+          />
+        </svg>
+      </div>
+      <div id="destinationcard">
+        <div id="imageBox">
+          <img
+            src="https://cdn.pixabay.com/photo/2021/07/15/08/44/town-6467851_1280.jpg"
+            alt="Italy"
+            id="destination-image"
+          />
+        </div>
+        <div id="card-body">
+          <p class="invisible" id = "card-id"></p>
+          <p >Country : <span id="card-country">Italy</span></p>
+          <p >Places : <span id="card-place">Lake Como, Pantheon, Capri</span></p>
+          <p >Price : <span id="card-price">$700</span></p>
+          <button class="btn btn-success" id="Confirm-destination">
+            Confirm Destination
+          </button>
+        </div>
+      </div>
+      <div id="dest-rightarrow">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="currentColor"
+          class="bi bi-caret-right-fill"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"
+          />
+        </svg>
       </div>
     </div>
     <div id="body">
@@ -593,13 +664,8 @@
             >Billing Details
           </p>
           <div class="form-check">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              value=""
-              id="formcheck"
-            />
-            <label class="form-check-label" for="formcheck">
+            <input id="formcheck" class="" type="checkbox" value="" />
+            <label class="form-check-label" for="formcheck" id="formcheckinput">
               The same as contact details
             </label>
           </div>
@@ -686,9 +752,69 @@
               ></textarea>
             </div>
           </div>
+          <div class="row g-3 align-items-center form-element">
+            <div class="col-9">
+              <button class="btn btn-danger" id="submitdata">Submit</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Payments -->
+      <div id="payments" class="invisible">
+        <div id="img-cont">
+          <img
+            src="https://images.pexels.com/photos/19872/pexels-photo.jpg"
+            alt="destination"
+            id = "pay-image"
+          />
+        </div>
+        <div id="main">
+          <p>Name : <span id="payment-name">Bhaskar Saha</span></p>
+          <p>
+            Destination : <span id="payment-dest">The Great wall of China</span>
+          </p>
+          <p>Price : <span id="payment-price">50000</span></p>
+          <button class="btn btn-danger" id="pay">Confirm</button>
+          <div id="payment-card-details " class="invisible">
+            <div class="paymentcardelem">
+              <label for="paymentcardname">Enter Your Name </label>
+              <input
+                type="text"
+                id="paymentcardname"
+                placeholder="Enter Your Name"
+              />
+            </div>
+            <div class="paymentcardelem">
+              <label for="paymentcardnumber">Enter Card Number</label>
+              <input
+                type="number"
+                id="paymentcardnumber"
+                placeholder="Enter Card Details"
+              />
+            </div>
+
+            <div class="paymentcardelem">
+              <label for="paymentcvv">Enter CVV</label>
+              <input type="number" id="paymentcvv" placeholder="Enter CVV" />
+            </div>
+            <div class="paymentcardelem">
+              <button class="btn btn-danger" id="pay-confirm">
+                Confirm Payment
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+    <!-- Payments -->
+
+    <script src="./script.js"></script>
+    <!-- <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script> -->
 
     <!-- Body................. -->
   </body>
