--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
      <section class="home" id="home">
      <div class="content" >
         <h3>Banjara</h3>
-        <p>A way of life...</p>
+        <p>A way of life..</p>
       </div>
     <div class="controls">
-      <span class="vid-btn active" data-src="homeImages/vid-1(c).mp4"></span>
+      <span class="vid-btn active" data-src="homeImages/vid-1.mp4"></span>
       <span class="vid-btn" data-src="homeImages/vid-2.mp4"></span>
       <span class="vid-btn" data-src="homeImages/vid-3.mp4"></span>
       <span class="vid-btn" data-src="homeImages/vid-4.mp4"></span>
